# users-lambda

./: README.md  lambda_function.py  pyproject.toml  requirements-dev.txt  sonar-project.properties  template.yaml
.github/workflows/: users-lambda.yml
tests/: conftest.py  test_lambda_function.py
